# self-healing-actions

./: provider.tf  pyproject.toml  requirements.txt  test_healing.py
.github/scripts/: env_checker.py  finalize_pr.py  healer.py
.github/workflows/: aws-deployment.yml  cd.yaml  deploy.yml  python-tests.yml  self-healing-agent.yml
src/: index.py  main.py
src/core/: data_processor.py
src/lambda/: index.py
src/self_healing_etl_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: data_loader.py
terraform/: README.md  backend.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
tests/: test_etl.py
